cmake_minimum_required(VERSION 3.0)

project("Catena")
enable_testing()
list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/CMake")

include("CMakeConfig")
include("CatenaConfig")
include("Functions")
include("Macros")

define_component_library(Rock 1 1)
define_component_library(Chalk 0 0)
define_component_library(Chalk_D3d9 1 0)
define_component_library(Chalk_D3d11 1 0)
define_component_library(Chalk_OpenGl 1 0)
define_component_library(Diamond 1 0)
define_component_library(Wood 0 0)
define_component_library(Wood_Windows 0 0)
define_component_executable(Launcher ${CATENA_LAUNCHER_ALLINONE})

add_subdirectory("Rock")
add_subdirectory("Chalk")

if(WITH_D3D9)
	add_subdirectory("Chalk_d3d9")
endif()
if(WITH_D3D11)
	add_subdirectory("Chalk_d3d11")
endif()
if(WITH_OPENGL)
	add_subdirectory("Chalk_OpenGl")
endif()

add_subdirectory("Diamond")
add_subdirectory("Wood")
add_subdirectory("Wood_Windows")
add_subdirectory("Launcher")

install(DIRECTORY ${RESOURCES_DIR}/All/ CONFIGURATIONS Debug DESTINATION Debug/bin)
install(DIRECTORY ${RESOURCES_DIR}/All/ CONFIGURATIONS Release DESTINATION Release/bin)
install(DIRECTORY ${RESOURCES_DIR}/All/ CONFIGURATIONS Publish DESTINATION Publish/bin)
install(DIRECTORY ${RESOURCES_DIR}/Debug/ CONFIGURATIONS Debug DESTINATION Debug/bin)
install(DIRECTORY ${RESOURCES_DIR}/Release/ CONFIGURATIONS Release DESTINATION Release/bin)
install(DIRECTORY ${RESOURCES_DIR}/Publish/ CONFIGURATIONS Publish DESTINATION Publish/bin)
